force-app/main/default/objects/SDM__c/SDM__c.object-meta.xml
<CustomObject>
    <label>SDM</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>SDM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>