force-app/main/default/objects/SDM__c/fields/A_child_discharged_from_a_facility__c.field-meta.xml
<CustomField>
    <fullName>A_child_discharged_from_a_facility__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A child being discharged from a facility and parents refuse to participate in planning for the child.</inlineHelpText>
    <label>A child discharged from a facility</label>
    <type>Checkbox</type>
</CustomField>