force-app/main/default/objects/SDM__c/fields/A_child_of_any_age_has_been_abandoned__c.field-meta.xml
<CustomField>
    <fullName>A_child_of_any_age_has_been_abandoned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A child of any age has been abandoned</label>
    <type>Checkbox</type>
</CustomField>