force-app/main/default/objects/SDM__c/fields/A_child_of_any_age_who_is_physically__c.field-meta.xml
<CustomField>
    <fullName>A_child_of_any_age_who_is_physically__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A child of any age who is physically,intellectually,or cognitively disabled is left unsupervised or with responsibilities beyond his or her capabilities</inlineHelpText>
    <label>A child of any age who is physically</label>
    <type>Checkbox</type>
</CustomField>