force-app/main/default/objects/SDM__c/fields/A_child_over_the_age_of_8_has_been_left__c.field-meta.xml
<CustomField>
    <fullName>A_child_over_the_age_of_8_has_been_left__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A child over the age of 8 has been left alone without support systems for long periods of time or with responsibilities beyond his or her capabilities.</inlineHelpText>
    <label>A child over the age of 8 has been left</label>
    <type>Checkbox</type>
</CustomField>