force-app/main/default/objects/SDM__c/fields/A_child_under_8_has_been_left_alone__c.field-meta.xml
<CustomField>
    <fullName>A_child_under_8_has_been_left_alone__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A child under the age of 8 has been left alone or in the care of an inappropriate caregiver.</inlineHelpText>
    <label>A child under 8 &amp; has been left alone</label>
    <type>Checkbox</type>
</CustomField>