force-app/main/default/objects/SDM__c/fields/A_current_expressed_threat_of_serious__c.field-meta.xml
<CustomField>
    <fullName>A_current_expressed_threat_of_serious__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A current expressed threat of serious</label>
    <type>Checkbox</type>
</CustomField>