force-app/main/default/objects/SDM__c/fields/A_need_for_law_assistance__c.field-meta.xml
<CustomField>
    <fullName>A_need_for_law_assistance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A need for law assistance</label>
    <type>Checkbox</type>
</CustomField>