force-app/main/default/objects/SDM__c/fields/Abuse_child_has_an_observable_identifi__c.field-meta.xml
<CustomField>
    <fullName>Abuse_child_has_an_observable_identifi__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A child has an observable ,identifiable, and substantial impairment of his/her mental or psychological ability to function as a result of an act of a parent, permanent or temporary caregiver, or household or family member</inlineHelpText>
    <label>Abuse child has an observable, identify</label>
    <type>Checkbox</type>
</CustomField>