force-app/main/default/objects/SDM__c/fields/Abuse_or_neglect_resulting_in_death__c.field-meta.xml
<CustomField>
    <fullName>Abuse_or_neglect_resulting_in_death__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abuse or neglect resulting in death</label>
    <type>Checkbox</type>
</CustomField>