force-app/main/default/objects/SDM__c/fields/Abuse_or_neglect_the_occurs_in_an_out_of__c.field-meta.xml
<CustomField>
    <fullName>Abuse_or_neglect_the_occurs_in_an_out_of__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abuse or neglect the occurs in an out-of</label>
    <type>Checkbox</type>
</CustomField>