force-app/main/default/objects/SDM__c/fields/Adult_Survivor_of_child_Maltreatment__c.field-meta.xml
<CustomField>
    <fullName>Adult_Survivor_of_child_Maltreatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult Survivor of child Maltreatment</label>
    <type>Checkbox</type>
</CustomField>