force-app/main/default/objects/SDM__c/fields/Allegations_that_the_maltreatment__c.field-meta.xml
<CustomField>
    <fullName>Allegations_that_the_maltreatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allegations that the maltreatment</label>
    <type>Checkbox</type>
</CustomField>