force-app/main/default/objects/SDM__c/fields/Alleged_Victim_s__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Victim_s__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Victim(s)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(((1 AND 2) OR (6 AND 7)) OR (3 AND 4)) AND 5</booleanFilter>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Case__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.Intake__c</field>
            <operation>equals</operation>
            <valueField>$Source.Intake__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Intake__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.Role_Formula__c</field>
            <operation>contains</operation>
            <value>6</value>
        </filterItems>
        <filterItems>
            <field>Contact.Investigation__c</field>
            <operation>equals</operation>
            <valueField>$Source.Investigation__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Investigation__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>SDMS</relationshipName>
    <type>Lookup</type>
</CustomField>