force-app/main/default/objects/SDM__c/fields/An_active_investigation__c.field-meta.xml
<CustomField>
    <fullName>An_active_investigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>An active investigation</label>
    <type>Checkbox</type>
</CustomField>