force-app/main/default/objects/SDM__c/fields/Birth_Match__c.field-meta.xml
<CustomField>
    <fullName>Birth_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birth Match</label>
    <type>Checkbox</type>
</CustomField>