force-app/main/default/objects/SDM__c/fields/Caregiver_action_that_caused_injury__c.field-meta.xml
<CustomField>
    <fullName>Caregiver_action_that_caused_injury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caregiver action that caused injury</label>
    <type>Checkbox</type>
</CustomField>