force-app/main/default/objects/SDM__c/fields/Child_Fatality__c.field-meta.xml
<CustomField>
    <fullName>Child_Fatality__c</fullName>
    <label>Child Fatality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>