force-app/main/default/objects/SDM__c/fields/Child_s_basic_need_to_be_unmet__c.field-meta.xml
<CustomField>
    <fullName>Child_s_basic_need_to_be_unmet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Child&apos;s basic needs are likely to be unmet due to caregiver impairment.</inlineHelpText>
    <label>Child&apos;s basic need to be unmet</label>
    <type>Checkbox</type>
</CustomField>