force-app/main/default/objects/SDM__c/fields/Court_ordered_investigation__c.field-meta.xml
<CustomField>
    <fullName>Court_ordered_investigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Court ordered investigation</label>
    <type>Checkbox</type>
</CustomField>