force-app/main/default/objects/SDM__c/fields/Criminal_history_bearing_on_child_safety__c.field-meta.xml
<CustomField>
    <fullName>Criminal_history_bearing_on_child_safety__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criminal history bearing on child safety</label>
    <type>Checkbox</type>
</CustomField>