force-app/main/default/objects/SDM__c/fields/Exposure_to_unsafe__c.field-meta.xml
<CustomField>
    <fullName>Exposure_to_unsafe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Exposure to unsafe conditions in the home.</inlineHelpText>
    <label>Exposure to unsafe</label>
    <type>Checkbox</type>
</CustomField>