force-app/main/default/objects/SDM__c/fields/Final_Screening_Decision__c.field-meta.xml
<CustomField>
    <fullName>Final_Screening_Decision__c</fullName>
    <label>Final Screening Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen out : No maltreatment type  is marked and no screen - in overrides apply</fullName>
            </value>
            <value>
                <fullName>Screen in : At least one maltreatment type of screen</fullName>
                <label>Screen in : At least one maltreatment type of screen - in overrides</label>
            </value>
            <value>
                <fullName>Accept as Non- CPS : only Risk of Harm type is marked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>