force-app/main/default/objects/SDM__c/fields/Giving_child_toxic_chemicals_alcohol__c.field-meta.xml
<CustomField>
    <fullName>Giving_child_toxic_chemicals_alcohol__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Giving child toxic chemicals,alcohol or drugs.</inlineHelpText>
    <label>Giving child toxic chemicals,alcohol</label>
    <type>Checkbox</type>
</CustomField>