force-app/main/default/objects/SDM__c/fields/Harm_Risk_of_Sex_Trafficking__c.field-meta.xml
<CustomField>
    <fullName>Harm_Risk_of_Sex_Trafficking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Harm Risk of Sex Trafficking</label>
    <type>Checkbox</type>
</CustomField>