force-app/main/default/objects/SDM__c/fields/Inadequate_clothing_or_hygiene__c.field-meta.xml
<CustomField>
    <fullName>Inadequate_clothing_or_hygiene__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inadequate clothing or hygiene</label>
    <type>Checkbox</type>
</CustomField>