force-app/main/default/objects/SDM__c/fields/Inadequate_of_food_nutrition__c.field-meta.xml
<CustomField>
    <fullName>Inadequate_of_food_nutrition__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inadequate of food/nutrition , or signs of malnutrition.</inlineHelpText>
    <label>Inadequate of food/nutrition</label>
    <type>Checkbox</type>
</CustomField>