force-app/main/default/objects/SDM__c/fields/Inadequate_supervision__c.field-meta.xml
<CustomField>
    <fullName>Inadequate_supervision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inadequate supervision</label>
    <type>Checkbox</type>
</CustomField>