force-app/main/default/objects/SDM__c/fields/Initial_Screen_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Initial_Screen_Recommendation__c</fullName>
    <label>Initial Screen Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Screen out (no maltreatment type is marked)</fullName>
            </value>
            <value>
                <fullName>Screen in (one or more maltreatment types are marked)</fullName>
            </value>
            <value>
                <fullName>Accept as Non-CPS: Only Risk of Harm type is marked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>