force-app/main/default/objects/SDM__c/fields/Injury_inconsistent_with_explanation__c.field-meta.xml
<CustomField>
    <fullName>Injury_inconsistent_with_explanation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injury inconsistent with explanation</label>
    <type>Checkbox</type>
</CustomField>