force-app/main/default/objects/SDM__c/fields/Injury_that_appears_suspicious__c.field-meta.xml
<CustomField>
    <fullName>Injury_that_appears_suspicious__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injury that appears suspicious</label>
    <type>Checkbox</type>
</CustomField>