force-app/main/default/objects/SDM__c/fields/Intake_Number__c.field-meta.xml
<CustomField>
    <fullName>Intake_Number__c</fullName>
    <formula>Intake__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake Number</label>
    <type>Text</type>
</CustomField>