force-app/main/default/objects/SDM__c/fields/Level_of_case_severity_risk_is_moderate__c.field-meta.xml
<CustomField>
    <fullName>Level_of_case_severity_risk_is_moderate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Level of case severity/risk is moderate</label>
    <type>Checkbox</type>
</CustomField>