force-app/main/default/objects/SDM__c/fields/Mental_injury_response_within_5_days__c.field-meta.xml
<CustomField>
    <fullName>Mental_injury_response_within_5_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mental injury-response within 5 days</label>
    <type>Checkbox</type>
</CustomField>