force-app/main/default/objects/SDM__c/fields/Multiple_similar_reports_within_120_days__c.field-meta.xml
<CustomField>
    <fullName>Multiple_similar_reports_within_120_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple similar reports within 120 days</label>
    <type>Checkbox</type>
</CustomField>