force-app/main/default/objects/SDM__c/fields/Neglect_response_within_5_days__c.field-meta.xml
<CustomField>
    <fullName>Neglect_response_within_5_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neglect-response within 5 days</label>
    <type>Checkbox</type>
</CustomField>