force-app/main/default/objects/SDM__c/fields/Non_accidental_physical_injury__c.field-meta.xml
<CustomField>
    <fullName>Non_accidental_physical_injury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-accidental physical injury</label>
    <type>Checkbox</type>
</CustomField>