force-app/main/default/objects/SDM__c/fields/Physical_behavioral_or_suspicious__c.field-meta.xml
<CustomField>
    <fullName>Physical_behavioral_or_suspicious__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Physical behavioral, or suspicious indicators consistent with sexual abuse</inlineHelpText>
    <label>Physical, behavioral, or suspicious</label>
    <type>Checkbox</type>
</CustomField>