force-app/main/default/objects/SDM__c/fields/Physical_treatment_of_the_child_poses__c.field-meta.xml
<CustomField>
    <fullName>Physical_treatment_of_the_child_poses__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Physical treatment of the child poses a significant risk to child health or welfare.</inlineHelpText>
    <label>Physical treatment of the child poses</label>
    <type>Checkbox</type>
</CustomField>