force-app/main/default/objects/SDM__c/fields/Previous_Fatality_or_Serious_Injury__c.field-meta.xml
<CustomField>
    <fullName>Previous_Fatality_or_Serious_Injury__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Previous Fatality or Serious Injury of a Child due to Child Abuse or Neglect.</inlineHelpText>
    <label>Previous Fatality or Serious Injury</label>
    <type>Checkbox</type>
</CustomField>