force-app/main/default/objects/SDM__c/fields/Prior_child_fatality_and_a_new_child__c.field-meta.xml
<CustomField>
    <fullName>Prior_child_fatality_and_a_new_child__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Prior child fatality and a new child in the home.</inlineHelpText>
    <label>Prior child fatality and a new child</label>
    <type>Checkbox</type>
</CustomField>