force-app/main/default/objects/SDM__c/fields/Prior_Indicated_or_Unsub_Finding__c.field-meta.xml
<CustomField>
    <fullName>Prior_Indicated_or_Unsub_Finding__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Prior Indicated or Unsub Finding and Child under age 5</inlineHelpText>
    <label>Prior Indicated or Unsub Finding</label>
    <type>Checkbox</type>
</CustomField>