force-app/main/default/objects/SDM__c/fields/Report_includes_allegation_of_abuse__c.field-meta.xml
<CustomField>
    <fullName>Report_includes_allegation_of_abuse__c</fullName>
    <inlineHelpText>Report includes allegation of abuse in which chid is under 1 year old and has received corporal punishment.</inlineHelpText>
    <label>Report includes allegation of abuse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>