force-app/main/default/objects/SDM__c/fields/Report_meets_criteria_for_Mental_Injury__c.field-meta.xml
<CustomField>
    <fullName>Report_meets_criteria_for_Mental_Injury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report meets criteria for Mental Injury</label>
    <type>Checkbox</type>
</CustomField>