force-app/main/default/objects/SDM__c/fields/Reported_history_of_a_family_s_inability__c.field-meta.xml
<CustomField>
    <fullName>Reported_history_of_a_family_s_inability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reported history of a family&apos;s inability</label>
    <type>Checkbox</type>
</CustomField>