force-app/main/default/objects/SDM__c/fields/Response_Time_Decision__c.field-meta.xml
<CustomField>
    <fullName>Response_Time_Decision__c</fullName>
    <label>Response Time Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Response required based on one or more criteria below(mark that all apply)</fullName>
            </value>
            <value>
                <fullName>No immediate response criteria exist and allegations include the following:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>