force-app/main/default/objects/SDM__c/fields/Risk_of_Domestic_Violence__c.field-meta.xml
<CustomField>
    <fullName>Risk_of_Domestic_Violence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk of Domestic Violence</label>
    <type>Checkbox</type>
</CustomField>