force-app/main/default/objects/SDM__c/fields/Risk_of_sex_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Risk_of_sex_Abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Risk of Sex Abuse by Registered Sex Offender.</inlineHelpText>
    <label>Risk of sex Abuse</label>
    <type>Checkbox</type>
</CustomField>