force-app/main/default/objects/SDM__c/fields/Risk_of_Sex_Trafficking__c.field-meta.xml
<CustomField>
    <fullName>Risk_of_Sex_Trafficking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk of Sex Trafficking</label>
    <type>Checkbox</type>
</CustomField>