force-app/main/default/objects/SDM__c/fields/Screen_in_override__c.field-meta.xml
<CustomField>
    <fullName>Screen_in_override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screen-in override</label>
    <type>Checkbox</type>
</CustomField>