force-app/main/default/objects/SDM__c/fields/SDM_Overrides__c.field-meta.xml
<CustomField>
    <fullName>SDM_Overrides__c</fullName>
    <label>Overrides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No overrides apply</fullName>
            </value>
            <value>
                <fullName>Screen out: One or more maltreatment types are marked, but referral will be screened out (mark all that apply)</fullName>
            </value>
            <value>
                <fullName>Screen in; No maltreatment type is marked, but referral will be reopened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>