force-app/main/default/objects/SDM__c/fields/Sexual_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Sexual_Abuse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sexual Abuse</label>
    <type>Checkbox</type>
</CustomField>