force-app/main/default/objects/SDM__c/fields/Sexual_abuse_response_within_24_hours__c.field-meta.xml
<CustomField>
    <fullName>Sexual_abuse_response_within_24_hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sexual abuse-response within 24 hours</label>
    <type>Checkbox</type>
</CustomField>