force-app/main/default/objects/SDM__c/fields/Sexual_act_s_among_siblings_or_other__c.field-meta.xml
<CustomField>
    <fullName>Sexual_act_s_among_siblings_or_other__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sexual act(s) among siblings or other children living in the home that is outside of normal exploration.</inlineHelpText>
    <label>Sexual act(s) among siblings or other</label>
    <type>Checkbox</type>
</CustomField>