force-app/main/default/objects/SDM__c/fields/Signs_or_Diagnosis_of_failure_to_thrive__c.field-meta.xml
<CustomField>
    <fullName>Signs_or_Diagnosis_of_failure_to_thrive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signs or Diagnosis of failure to thrive</label>
    <type>Checkbox</type>
</CustomField>