force-app/main/default/objects/SDM__c/fields/signs_or_diagnosis_of_non_organic__c.field-meta.xml
<CustomField>
    <fullName>signs_or_diagnosis_of_non_organic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Signs or Diagnosis of non-organic failure to thrive.</inlineHelpText>
    <label>Signs or Diagnosis of non-organic</label>
    <type>Checkbox</type>
</CustomField>