force-app/main/default/objects/SDM__c/fields/Substance_Exposed_Newborn__c.field-meta.xml
<CustomField>
    <fullName>Substance_Exposed_Newborn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Substance Exposed Newborn</label>
    <type>Checkbox</type>
</CustomField>