force-app/main/default/objects/SDM__c/fields/Suspicious_death_of_child_due_to_neglect__c.field-meta.xml
<CustomField>
    <fullName>Suspicious_death_of_child_due_to_neglect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspicious death of child due to neglect</label>
    <type>Checkbox</type>
</CustomField>