force-app/main/default/objects/SDM__c/fields/The_caregiver_does_not_intervene_despite__c.field-meta.xml
<CustomField>
    <fullName>The_caregiver_does_not_intervene_despite__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The caregiver does not intervene despite knowledge (or reasonable expectation that the caregiver should have knowledge) that the child is being harmed (includes physical or sexual abuse, neglect or mental injury) by another person.</inlineHelpText>
    <label>The caregiver does not intervene despite</label>
    <type>Checkbox</type>
</CustomField>