force-app/main/default/objects/SDM__c/fields/The_individual_suspected_had_one_report__c.field-meta.xml
<CustomField>
    <fullName>The_individual_suspected_had_one_report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>The individual suspected  had one report</label>
    <type>Checkbox</type>
</CustomField>