force-app/main/default/objects/SDM__c/fields/The_individual_suspected_of_maltreatment__c.field-meta.xml
<CustomField>
    <fullName>The_individual_suspected_of_maltreatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>The individual suspected of maltreatment</label>
    <type>Checkbox</type>
</CustomField>