force-app/main/default/objects/SDM__c/fields/The_unreasonable_delay__c.field-meta.xml
<CustomField>
    <fullName>The_unreasonable_delay__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The unreasonable delay, refusal, or failure on the part of the caregiver to seek , obtain, and/or maintain necessary medical, dental, or mental health care.</inlineHelpText>
    <label>The unreasonable delay</label>
    <type>Checkbox</type>
</CustomField>