force-app/main/default/objects/SDM__c/fields/There_is_Risk_of_Harm_for_a_Substance__c.field-meta.xml
<CustomField>
    <fullName>There_is_Risk_of_Harm_for_a_Substance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>There is Risk of Harm for a Substance Abuse Newborn Which needs to be handled within 48 hours</inlineHelpText>
    <label>There is Risk of Harm for a Substance</label>
    <type>Checkbox</type>
</CustomField>