force-app/main/default/objects/SDM__c/fields/There_is_Risk_of_Harm_Response_within_5__c.field-meta.xml
<CustomField>
    <fullName>There_is_Risk_of_Harm_Response_within_5__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>There is Risk of Harm. Response within 5 days</inlineHelpText>
    <label>There is Risk of Harm. Response within 5</label>
    <type>Checkbox</type>
</CustomField>