force-app/main/default/objects/SDM__c/fields/X33446__c.field-meta.xml
<CustomField>
    <fullName>X33446__c</fullName>
    <defaultValue>false</defaultValue>
    <label>33446</label>
    <type>Checkbox</type>
</CustomField>