force-app/main/default/objects/SDM__c/fields/X33447__c.field-meta.xml
<CustomField>
    <fullName>X33447__c</fullName>
    <defaultValue>false</defaultValue>
    <label>33447</label>
    <type>Checkbox</type>
</CustomField>