force-app/main/default/objects/SDM__c/fields/X33448__c.field-meta.xml
<CustomField>
    <fullName>X33448__c</fullName>
    <defaultValue>false</defaultValue>
    <label>33448</label>
    <type>Checkbox</type>
</CustomField>