force-app/main/default/objects/SDM__c/recordTypes/SDM_Dynamic_Type.recordType-meta.xml
<RecordType>
    <fullName>SDM_Dynamic_Type</fullName>
    <active>true</active>
    <label>SDM Dynamic Type</label>
</RecordType>